Fixed subtitle in dashboard panel doesn't wrap white-space.

--- a/src/app/dashboard/interpreter-panel/interpreter-panel.component.css
+++ b/src/app/dashboard/interpreter-panel/interpreter-panel.component.css
@@ -2,3 +2,7 @@ mat-card {
     box-sizing: border-box;
     height: 100%;
 }
+
+mat-card-subtitle {
+    white-space: pre-wrap;
+}
